force-app/main/default/objects/TopicsAuto__c/TopicsAuto__c.object-meta.xml
<CustomObject>
    <label>Palitagem Automática</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Palitagens Automáticas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>