force-app/main/default/objects/TopicsAuto__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lojas Próprias</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Integração</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>