force-app/main/default/objects/TopicsAuto__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data Inativação</label>
    <type>DateTime</type>
</CustomField>