force-app/main/default/objects/TopicsAuto__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Ponto de Palitagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agendamento Extrato Recorrente</fullName>
            </value>
            <value>
                <fullName>Ajuste de Saldo</fullName>
            </value>
            <value>
                <fullName>Alteração Dados Contatos</fullName>
            </value>
            <value>
                <fullName>Alteração Dados do Contato Principal</fullName>
            </value>
            <value>
                <fullName>Alteração Dados Pessoais</fullName>
            </value>
            <value>
                <fullName>Alteração das Permissões de Contato</fullName>
            </value>
            <value>
                <fullName>Alteração de Endereço da Linha</fullName>
            </value>
            <value>
                <fullName>Antecipação da Promoção</fullName>
                <isActive>false</isActive>
                <label>Antecipação da Promoção</label>
            </value>
            <value>
                <fullName>Antecipação de Promoção</fullName>
            </value>
            <value>
                <fullName>Associação de cadastro</fullName>
            </value>
            <value>
                <fullName>Ativação de Serviços Avançados</fullName>
            </value>
            <value>
                <fullName>Ativação do Crédito Antecipado</fullName>
            </value>
            <value>
                <fullName>Ativar / Desativar Promoção</fullName>
            </value>
            <value>
                <fullName>Autorizar doação Estorno de Port In</fullName>
            </value>
            <value>
                <fullName>Bloqueio a Pedido</fullName>
            </value>
            <value>
                <fullName>Bloqueio Perda e Roubo</fullName>
            </value>
            <value>
                <fullName>Cadastrar Cliente</fullName>
            </value>
            <value>
                <fullName>Cadastro Linha Sem Cadastro</fullName>
            </value>
            <value>
                <fullName>Cancelamento de Linha</fullName>
            </value>
            <value>
                <fullName>Cancelamento Extrato Recorrente</fullName>
            </value>
            <value>
                <fullName>Consulta de Antecipação de Crédito</fullName>
            </value>
            <value>
                <fullName>Consulta de Compartilhamento de Dados</fullName>
            </value>
            <value>
                <fullName>Consulta de Notas Fiscais</fullName>
            </value>
            <value>
                <fullName>Consulta de Notificações</fullName>
            </value>
            <value>
                <fullName>Consulta Histórico de Eventos</fullName>
            </value>
            <value>
                <fullName>Consulta Histórico de Operações</fullName>
            </value>
            <value>
                <fullName>Consulta Histórico de Promoções</fullName>
            </value>
            <value>
                <fullName>Consulta PUK</fullName>
            </value>
            <value>
                <fullName>Consultar Consumo de Mensagens, Voz, Bonus</fullName>
            </value>
            <value>
                <fullName>Desativação de Serviços Avançados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>