force-app/main/default/objects/TopicsAuto__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data Ativação</label>
    <type>DateTime</type>
</CustomField>