force-app/main/default/objects/TopicsAuto__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Palito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>