force-app/main/default/objects/TopicsAuto__c/fields/TopicId__c.field-meta.xml
<CustomField>
    <fullName>TopicId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Palito Id</label>
    <referenceTo>CustomerInteractionTopicTree__c</referenceTo>
    <relationshipName>Palito</relationshipName>
    <type>Lookup</type>
</CustomField>