force-app/main/default/objects/TopicsAuto__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Topic-Utilizado para a criação de palitagem automática e interação.
Case-Utilizado para a criação de um caso com palitagem automática e interação.
API-Utilizado para a criação de um caso sem interação, somente com mapeamento de palitagem.</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Topic</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>